# kinyarwanda-whisper-eval

./: .gitignore  README.md  data_utils.py  env_example  eval.py  generate_configs.py  main.py  pyproject.toml  requirements.txt  split_long_audio_into_segments.ipynb  train.py  train_all.sh  train_kikuyu.py  train_swahili.py  utils.py
configs/: baseline.yaml  train_1000.yaml  train_10h.yaml  train_150h.yaml  train_1h.yaml  train_200h.yaml  train_20h.yaml  train_500h.yaml  train_zulu_full.yaml
configs/ful/: baseline.yaml  train_100h.yaml  train_10h.yaml  train_150h.yaml  train_1h.yaml  train_200h.yaml  train_20h.yaml  train_500h.yaml  train_50h.yaml  train_5h.yaml  train_fulani_50h.yaml
configs/kik/: baseline.yaml  train_1h.yaml  train_30h.yaml
configs/kin/: train_100h.yaml  train_50h.yaml  train_full.yaml
configs/lin/: baseline.yaml  train_100h.yaml  train_10h.yaml  train_150h.yaml  train_1h.yaml  train_200h.yaml  train_20h.yaml  train_500h.yaml  train_50h.yaml  train_5h.yaml
configs/sna/: baseline.yaml  train_100h.yaml  train_10h.yaml  train_150h.yaml  train_1h.yaml  train_200h.yaml  train_20h.yaml  train_500h.yaml  train_50h.yaml  train_5h.yaml  train_shona_1h.yaml
configs/swa/: train_100h.yaml  train_10h.yaml  train_150h.yaml  train_1h.yaml  train_200h.yaml  train_20h.yaml  train_250h.yaml  train_300h.yaml  train_30h.yaml  train_50h.yaml  train_full.yaml
